@@ -209,6 +209,9 @@ Other Changes
 
 * SOLR-5401: SolrResourceLoader logs a warning if a deprecated (factory) class
   is used in schema or config.  (Uwe Schindler)
+  
+* SOLR-3397: Warn if master or slave replication is enabled in SolrCloud mode. (Erick
+  Erickson)
 
 ==================  4.5.1 ==================
 
